--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" type="text/css" href="css/normalize.css">
       <link rel="stylesheet" type="text/css" href="css/style.production.css">
   
-      <title>title</title>
+      <title>KW Portfolio</title>
   
     </head>
 
