Placeholder replacement changes
changed page titles
created main class
created header text  class
created about table class
created about button class
created about svg id
created class contact links
changed index title width
changed link colors

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" type="text/css" href="css/normalize.css">
      <link rel="stylesheet" type="text/css" href="css/style.production.css">
   
-      <title>title</title>
+      <title>About Ken Washington</title>
   
     </head>
     
@@ -45,15 +45,15 @@
         </header>
 
 
-        <main>
+        <main class="main">
 
-            <h1>About</h1>
+            <h1 class="header-text">About The Developer</h1>
 
  
-            <p>I'm a college graduate with an associates degree in responsive front-end web development. With my training i am Able to effectively self-manage during independent projects, as well as collaborate in a team setting.	 I've planned, developed, tested, deployed, and maintained multiple web sites for various organizations.
+            <p id="about_text">I'm a college graduate with an associates degree in responsive front-end web development. With my training i am Able to effectively self-manage during independent projects, as well as collaborate in a team setting.	 I've planned, developed, tested, deployed, and maintained multiple web sites for various organizations. . I currently have three years of hands-on experience efficiently designing and coding websites and applications using modern HTML, CSS, JavaScript, Bootstrap and Adobe applications. In addition, my background in customer service has given me the skills to effectively communicate with clients or co-workers and the ability adjust to the changing dynamics of working individually and in team environments while meeting deadlines in a timely fashion.
             </p>
  
-         <table>
+         <table id="about_table">
             <thead>
               <tr>
                 <th>Skills</th>
@@ -80,9 +80,13 @@
             </tbody>
         </table>
 
-        <a href="img/Kenneth_Washington%20_Resume.pdf" class="button" download>Download my CV</a>
+        <a href="img/Kenneth_Washington%20_Resume.pdf" class="button" id="about_button" download>Download my CV</a>
+        
+        <br>
+        <br>
+        <br>
 
-    <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="505" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <svg id="about_svg" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="505" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
             <polygon id="a" points=".06 231.917 .06 .929 688.717 .929 688.717 231.917" />
         </defs>
