--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" type="text/css" href="css/normalize.css">
      <link rel="stylesheet" type="text/css" href="css/style.production.css">
   
-      <title>title</title>
+      <title>Work Examples</title>
   
     </head>
     
