--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-      <meta charset="UTF-8">
+        <meta charset="UTF-8">
       
       <meta name="viewport" content="width=device-width, initial-scale=1">
  
@@ -10,9 +10,9 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&display=swap" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="css/normalize.css">
-     <link rel="stylesheet" type="text/css" href="css/style.production.css">
+      <link rel="stylesheet" type="text/css" href="css/style.production.css">
   
-      <title>About Ken Washington</title>
+          <title>KW Portfolio</title>
   
     </head>
     
@@ -20,7 +20,7 @@
 
      <header class="page-header">
 
-            <a href="index.html"><img class="page-header__item" src="img/logoken_white.png"  width="135px" alt="logo" ></a>
+            <a href="index.html"><img class="page-header__item" src="img/logoken_white.png"  width="135" alt="logo" ></a>
 
             <nav class="main-navigation page-header__item">
                 <ul role="menubar" class="navigation-list">
