--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
       <meta charset="UTF-8">
       
@@ -19,7 +19,9 @@
     <body>
         <header class="page-header">
 
-            <a href="index.html"><img class="page-header__item"src="img/logoken_white.png"  width="135px" alt="logo" ></a>
+            <a href="index.html">
+                <img class="page-header__item" src="img/logoken_white.png"  width="135" alt="logo">
+            </a>
 
             <nav class="main-navigation page-header__item">
                 <ul role="menubar" class="navigation-list">
@@ -46,14 +48,23 @@
 
         <main class="main">
             <div id="contact_text">
-                Kenneth Washington<br>
-                7162 N Lake Street <br>
-                Menomonee Falls WI<br>
-                United States<br>
+                Kenneth Washington
                 <br>
-               Telephone:414-801-2217 <a  class="contact_links" role="telephonenumber" href="tel:14148012217">Call Me Today!</a><br>
-               Github <a class="contact_links" href="https://github.com/SGF-MMXXI"> SGF-MMXXI</a><br>
-               <a class="contact_links" href="mailto:KennethWashington294@.com">KennethWashington294@gmail.com</a> <br>
+                7162 N Lake Street 
+                <br>
+                Menomonee Falls WI
+                <br>
+                United States
+                <br>
+                <br>
+               Telephone:414-801-2217 
+               <a  class="contact_links"  href="tel:14148012217">Call Me Today!</a>
+                <br>
+               Github
+               <a class="contact_links" href="https://github.com/SGF-MMXXI"> SGF-MMXXI</a>
+                <br>
+               <a class="contact_links" href="mailto:KennethWashington294@.com">KennethWashington294@gmail.com</a> 
+                <br>
 
                <a class="contact_links" href="mailto:KennethWashington294@.com">Contact Me</a> 
             </div>
@@ -64,7 +75,7 @@
            
             <form action="/login-form-action" method="post" id="contact-form">
                 <label class="standard-label" for="name">Full Name:</label>
-                  <input type="name" id="name" name="user_name">
+                  <input type="text" id="name" name="user_name">
 
               <label class="standard-label" for="email">E-mail:</label>
                   <input type="email" id="email" name="user_email" required> 
