--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
       <meta charset="UTF-8">
       
@@ -19,7 +19,7 @@
     <body>
         <header class="page-header">
 
-            <a href="index.html"><img class="page-header__item" src="img/logoken_white.png" width="140px" alt="logo" ></a>
+            <a href="index.html"><img class="page-header__item" src="img/logoken_white.png" width="140" alt="logo" ></a>
 
             <nav class="main-navigation page-header__item">
                 <ul role="menubar" class="navigation-list">
